@@ -9,8 +9,10 @@ apport (0.3) UNRELEASED; urgency=low
   * apport-gtk: Add button to remove the current report (by truncating the
     file to zero bytes; a user cannot unlink files in /var/crash).
   * apport-gtk: Only display reports that the user can actually read.
+  * problem_report.py: Add 'binary' option to ProblemReport.load() to
+    optionally skip binary data.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 31 Jul 2006 11:40:26 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 31 Jul 2006 11:47:39 +0200
 
 apport (0.2) edgy; urgency=low
 
